# English

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  english.py  pyproject.toml  setup.py
.github/workflows/: workflow.yml
Geemeth/: __init__.py  english.py  english_core.c  english_core.pyx
