[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GSL20051013-english"
version = "1.0.0"
description = "Context-aware English part-of-speech tagger with clause and connective detection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "GSL20051013" },
]
keywords = [
    "nlp",
    "pos",
    "part-of-speech",
    "tagger",
    "english",
    "linguistics",
    "spacy",
    "nltk",
    "clause",
    "connective",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
]
dependencies = [
    "nltk>=3.8",
]

[project.optional-dependencies]
spacy = [
    "spacy>=3.5",
]
dev = [
    "pytest>=7.0",
    "twine",
    "build",
]

[project.urls]
Homepage      = "https://github.com/GSL20051013/English"
Repository    = "https://github.com/GSL20051013/English"
"Bug Tracker" = "https://github.com/GSL20051013/English/issues"
Changelog     = "https://github.com/GSL20051013/English/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["Geemeth*"]

